@@ -16,7 +16,7 @@ this program.  If not, see <http://www.gnu.org/licenses/>.  */
 
 #include <stdlib.h>
 #include <windows.h>
-#include "make.h"
+#include "makeint.h"
 #include "w32err.h"
 
 /*
