@@ -1,3 +1,8 @@
+2013-01-20  Paul Smith  <psmith@gnu.org>
+
+	* make.h: Rename to makeint.h.
+	* Many: Use the new name makeint.h.
+
 2013-01-19  Paul Smith  <psmith@gnu.org>
 
 	* doc/make.texi (load Directive): Update to discuss location of
